--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         document.documentElement.classList.add('js');
     </script>
 
-    <link rel="stylesheet" href="css/vendor.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="vendor.css">
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 
@@ -160,10 +160,10 @@
 
     <!-- Java Script
     ================================================== -->
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/particles.min.js"></script>
-    <script src="js/particle-settings.js"></script>
+    <script src="plugins.js"></script>
+    <script src="main.js"></script>
+    <script src="particles.min.js"></script>
+    <script src="particle-settings.js"></script>
 
 </body>
 </html>
